// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container ActionBar should compute props using CMF with array of string 1`] = `
Object {
  "actions": Object {
    "left": Array [
      Object {
        "actionId": "menu:demo",
      },
      Object {
        "actionId": "menu:article",
      },
      Object {
        "actions": Array [
          "menu:demo",
          "menu:article",
        ],
        "displayMode": "btnGroup",
      },
    ],
    "right": Array [
      Object {
        "displayMode": "splitDropdown",
        "items": Array [
          "menu:article",
        ],
        "name": "menu:demo",
      },
    ],
  },
  "deleteState": [Function],
  "dispatch": [Function],
  "dispatchActionCreator": [Function],
  "getComponent": [Function],
  "initState": [Function],
  "renderers": Object {
    "Action": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "DISPLAY_MODE_DROPDOWN": "dropdown",
      "DISPLAY_MODE_FILE": "file",
      "DISPLAY_MODE_ICON_TOGGLE": "iconToggle",
      "DISPLAY_MODE_SPLIT_DROPDOWN": "splitDropdown",
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Action))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
    "ActionDropdown": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Container(ActionDropdown)))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
    "ActionSplitDropdown": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Container(ActionSplitDropdown)))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
    "Actions": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Actions))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
  },
  "setState": [Function],
  "state": undefined,
  "updateState": [Function],
}
`;

exports[`Container ActionBar should pass the props 1`] = `
Object {
  "actions": Object {
    "left": Array [
      Object {
        "bsStyle": "primary",
        "icon": "fa fa-asterisk",
        "label": "Preparations",
        "onClick": [MockFunction],
      },
      Object {
        "displayMode": "dropdown",
        "icon": "fa fa-file-excel-o",
        "items": Array [
          Object {
            "label": "document 1",
            "onClick": [MockFunction],
          },
          Object {
            "label": "document 2",
            "onClick": [MockFunction],
          },
        ],
        "label": "related items",
      },
    ],
    "right": Array [
      Object {
        "icon": "fa fa-file-excel-o",
        "label": "Datasets",
        "onClick": [MockFunction],
      },
      Object {
        "icon": "fa fa-star",
        "label": "Favorites",
        "onClick": [MockFunction],
      },
      Object {
        "actions": Array [
          Object {
            "label": "document 1",
            "onClick": [MockFunction],
          },
          Object {
            "label": "document 2",
            "onClick": [MockFunction],
          },
        ],
        "displayMode": "btnGroup",
      },
    ],
  },
  "deleteState": [Function],
  "dispatch": [Function],
  "dispatchActionCreator": [Function],
  "getComponent": [Function],
  "initState": [Function],
  "renderers": Object {
    "Action": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "DISPLAY_MODE_DROPDOWN": "dropdown",
      "DISPLAY_MODE_FILE": "file",
      "DISPLAY_MODE_ICON_TOGGLE": "iconToggle",
      "DISPLAY_MODE_SPLIT_DROPDOWN": "splitDropdown",
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Action))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
    "ActionDropdown": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Container(ActionDropdown)))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
    "ActionSplitDropdown": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Container(ActionSplitDropdown)))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
    "Actions": Object {
      "$$typeof": Symbol(react.memo),
      "CMFContainer": [Function],
      "WrappedComponent": [Function],
      "compare": null,
      "displayName": "Connect(CMF(Actions))",
      "getState": [Function],
      "setStateAction": [Function],
      "type": [Function],
    },
  },
  "setState": [Function],
  "state": undefined,
  "updateState": [Function],
}
`;
